1) Updated run scripts to remove perm gen memory information