@@ -3,7 +3,7 @@ set JAVA_HOME=@java_home@
 set DIPFORGE_HOME=@dipforge_home@
 set VERSION=@dipforge_version@
 set EXTRA=""
-set JAVA="%JAVA_HOME%java"
+set JAVA="%JAVA_HOME%/bin/java"
 set JAVA_OPTS=-Dcoad.config=com.rift.coad.lib.configuration.xml.XMLConfigurationFactory
 set JAVA_OPTS=%JAVA_OPTS% -Dxml.config.path="%DIPFORGE_HOME%/etc/config.xml"
 set JAVA_OPTS=%JAVA_OPTS% -DLog.File="%DIPFORGE_HOME%/etc/log4j.properties"
@@ -16,5 +16,5 @@ set JAVA_OPTS=%JAVA_OPTS% -Djava.rmi.server.RMIClassLoaderSpi=com.rift.coad.Remo
 set CURRENT_DIR=./
 set COAD_LIB_DIRS=%DIPFORGE_HOME%/lib;%JAVA_HOME%/lib/tools.jar;
 
-echo %JAVA% %JAVA_OPTS% -Xmx2048M -XX:PermSize=128M -XX:MaxPermSize=256M -cp %EXTRA% -jar "%DIPFORGE_HOME%/sbin/CoadunationBase.jar"
-%JAVA% %JAVA_OPTS% -Xmx2048M -XX:PermSize=128M -XX:MaxPermSize=256M -cp %EXTRA% -jar "%DIPFORGE_HOME%/sbin/CoadunationBase-%VERSION%.jar"
+echo %JAVA% %JAVA_OPTS% -Xmx2048M -cp %EXTRA% -jar "%DIPFORGE_HOME%/sbin/CoadunationBase.jar"
+%JAVA% %JAVA_OPTS% -Xmx2048M -cp %EXTRA% -jar "%DIPFORGE_HOME%/sbin/CoadunationBase-%VERSION%.jar"
